[package]
name = "anguissa-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-socketcan = "0.3.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
procfs = "0.14.1"
clap = { version = "4.0.15", features = ["derive"] }
