[package]
name = "anguissa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
socketcan = "1.7.0"
thiserror = "1.0.38"
tracing = "0.1"
tracing-subscriber = "0.3"
tui = "0.19"
crossterm = "0.25"
clap = { version = "4.1.6", features = ["cargo"] }
owo-colors = "3.5.0"
chrono = "0.4.23"
